Use MIT license

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "pvtl/cloudflare-responsive-images",
   "description": "Disables WordPress image variants and uses Cloudflare Transform for responsive images.",
   "homepage": "https://github.com/pvtl/cloudflare-responsive-images",
-  "license": "GPL-2.0-or-later",
+  "license": "MIT",
   "authors": [
     {
       "name": "Pivotal Agency",
